Handles images rotated by 90/-90/180 degree as high level object.

This change implement rotated image as a high-level object by
emitting a PXL rotation intruction, draw the image with rotated
user co-ordinate, then the reverse PXL rotation. Fixes bug 690733.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10193 a1074d23-0009-0410-80fe-cf8c14f379e6